--- a/social.html
+++ b/social.html
@@ -32,7 +32,7 @@
         <a href="https://www.linkedin.com/in/seonggyunkim" target="_blank" rel="noopener">LinkedIn</a>
       </li>
       <li style="margin: .6rem 0;">
-        <a href="mailto:seonggyun.kim@outlook.com">seonggyun.kim@outlook.com</a>
+        <a href="mailto:seonggyun.kim@outlook.com">Email</a>
       </li>
       </ul>
   </main>
