--- a/index.html
+++ b/index.html
@@ -10,29 +10,6 @@
 
   <!-- Global styles -->
   <link rel="stylesheet" href="styles.css">
-
-  <!-- Page‑specific (hero) styles -->
-  <style>
-    .hero {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 20vh;
-      text-align: center;
-      padding: 0 1rem;
-      padding-top: 100px;
-    }
-    .hero h1   { font-size: clamp(2.5rem, 6vw, 4rem); margin: 0 0 .5em; }
-    .hero p    { font-size: 1.1rem; max-width: 700px; margin: 0 0 1.5em; }
-    .cta-btn   { display: inline-block; padding: .75em 1.5em; border-radius: 8px;
-                 font-weight: 600; text-decoration: none; background: var(--link, #0066cc); color: #fff; }
-    .sections  { max-width: 960px; margin: 3rem auto; padding: 0 1rem; }
-    .sections h2 { font-size: 1.6rem; margin-bottom: .5em; }
-    .card-grid { display: grid; gap: 1.5rem; grid-template-columns: repeat(auto-fit,minmax(250px,1fr)); }
-    .card      { padding: 1.5rem; border: 1px solid #d0d0d0; border-radius: 10px; background: #fafafa; }
-    .card h3   { margin: 0 0 .5em; font-size: 1.2rem; }
-  </style>
 </head>
 
 <body>
@@ -47,9 +24,9 @@
   <header class="hero">
     <h1>Seonggyun Kim</h1>
     <p>
-      Master’s student in Chemical Engineering for Energy &amp; Environment at KTH.<br>
-      Process simulation, thermodynamics, techno-economic analysis, etc.<br>
-      This webpage is still a work in progress. Especially, currently there is no consideration for mobile devices.<br>
+      <!-- Master’s student in Chemical Engineering for Energy &amp; Environment at KTH.<br> -->
+      <!-- Process simulation, thermodynamics, techno-economic analysis, etc.<br> -->
+      Welcome! Thanks for visiting my website, but this webpage is still a work in progress. Especially, currently there is no consideration for mobile devices.<br>
       If you are here to view my CV online, click <a href="cv-seonggyun-kim.pdf">here</a>.
     </p>
     <!-- <a class="cta-btn">View Projects</a> -->
