--- a/projects.html
+++ b/projects.html
@@ -22,12 +22,11 @@
 
   <main class="container">
     <h2>Projects</h2>
-
+    <p>Click on the project titles to view more details and associated report/slides.</p>
     <!-- Project table -->
     <table id="project-table">
       <thead>
         <tr>
-          <th></th>
           <th onclick="sortTable(0)">Title</th>
           <th class="year-column" onclick="sortTable(1)">Year</th>
         </tr>
@@ -35,118 +34,107 @@
       <tbody>
         <!-- 2024 ---------------------------------------------------------->
         <tr onclick="toggleDetails(this)"
-            data-inst="KTH Royal Institute of Technology"
-            data-desc="A techno‑economic study evaluating the deployment of carbon capture and storage in Sweden."
+            data-category="Coursework | KTH Royal Institute of Technology"
+            data-desc="A techno‑economic study evaluating the deployment of carbon capture and storage in Sweden. | Lead implementation of kinetic reaction models and process simulation for the carbon utilization (MeOH synthesis) process. | Developed a techno‑economic model for the entire CCUS chain, including carbon capture, transport, and storage."
             data-link1-name="Report"
             data-link1-url="projects/techno-economic-analysis-ccus-sweden.pdf">
-          <td class="expand-btn"><span class="toggle-icon">+</span></td>
           <td class="clickable-project">Techno‑economic Analysis of CCUS in Sweden</td>
           <td class="year-column">2024</td>
         </tr>
 
         <tr onclick="toggleDetails(this)"
-            data-inst="KSSEA (Korean-Scandinavian Scientists and Engineers Association)"
-            data-desc="An introductory presentation on CCUS processes, with a focus on post-combustion carbon capture and importance of process simulation."
+            data-category="KSSEA (Korean-Scandinavian Scientists and Engineers Association)"
+            data-desc="Held an introductory presentation on CCUS processes. | Discussed post-combustion carbon capture process in depth, along with the importance of process modelling. | Presented at the KSSEA 2025 conference in Stockholm, Sweden."
             data-link1-name="Presentation"
             data-link1-url="projects/introduction-to-ccus-kssea-2025.pdf">
-          <td class="expand-btn"><span class="toggle-icon">+</span></td>
           <td class="clickable-project">Introduction to CCUS</td>
           <td class="year-column">2024</td>
         </tr>
 
         <tr onclick="toggleDetails(this)"
-            data-inst="APS Academic Competition – Europe"
-            data-desc="My entry to a three-month academic competition using &quot;AVEVA Process Simulation&quot;. | Built and optimized an ammonia production system with green hydrogen from solar farm. | Compared the ammonia route to a direct pipeline transport route and demonstrated economic feasibility of ammonia as a hydrogen carrier. | Won the first prize in Europe."
-            data-link1-name="Entry to the competition"
+            data-category="APS Academic Competition – Europe"
+            data-desc="My entry to a three-month academic competition using a next-generation process simulator, AVEVA Process Simulation. | Built and optimized an ammonia process with green hydrogen feed from solar farm. | Compared the ammonia route to a direct pipeline transport route and demonstrated economic feasibility of ammonia as a hydrogen carrier. | Won the first prize (best overall) in Europe."
+            data-link1-name="Competition submission"
             data-link1-url="projects/aps-competition-submission-seonggyun-kim.pdf"
             data-link2-name="Presentation"
             data-link2-url="projects/aveva-competition-winners-presentation.pdf">
-          <td class="expand-btn"><span class="toggle-icon">+</span></td>
           <td class="clickable-project">Hydrogen Economy: Ammonia Synthesis Process Optimization</td>
           <td class="year-column">2024</td>
         </tr>
 
         <tr onclick="toggleDetails(this)"
-            data-inst="KTH Royal Institute of Technology"
-            data-desc="Study on supercritical CO₂ extraction methods | Application in sustainable metal recovery."
+            data-category="KTH Royal Institute of Technology"
+            data-desc="Study on supercritical CO<sub>2</sub> extraction methods | Application in sustainable metal recovery."
             data-link1-name="Report"
             data-link1-url="projects/metal-recovery-supercritical-co2.pdf">
-          <td class="expand-btn"><span class="toggle-icon">+</span></td>
-          <td class="clickable-project">Metal Recovery Using Supercritical CO₂</td>
+          <td class="clickable-project">Metal Recovery Using Supercritical CO<sub>2</sub></td>
           <td class="year-column">2024</td>
         </tr>
 
         <!-- 2023 ---------------------------------------------------------->
         <tr onclick="toggleDetails(this)"
-            data-inst="KTH Royal Institute of Technology"
+            data-category="KTH Royal Institute of Technology"
             data-desc="Research on Ni‑rich cathodes | Focused on high‑performance Li‑ion batteries."
             data-link1-name="Report"
             data-link1-url="projects/nickel-rich-electrodes-li-ion-batteries.pdf">
-          <td class="expand-btn"><span class="toggle-icon">+</span></td>
           <td class="clickable-project">Nickel‑rich Electrodes for Li‑ion Batteries</td>
           <td class="year-column">2023</td>
         </tr>
 
         <tr onclick="toggleDetails(this)"
-            data-inst="KTH Royal Institute of Technology"
+            data-category="KTH Royal Institute of Technology"
             data-desc="Risk assessment of pilot‑scale gasifiers | Safety and operational analysis."
             data-link1-name="Report"
             data-link1-url="projects/pressurized-fluidized-bed-gasifier-risk-analysis.pdf">
-          <td class="expand-btn"><span class="toggle-icon">+</span></td>
           <td class="clickable-project">Pressurised Pilot‑scale Fluidised Bed Gasifier</td>
           <td class="year-column">2023</td>
         </tr>
 
         <tr onclick="toggleDetails(this)"
-            data-inst="KTH Royal Institute of Technology"
+            data-category="KTH Royal Institute of Technology"
             data-desc="Analysis of biomass CHP systems | Integration of fuel drying for improved efficiency."
             data-link1-name="Report"
             data-link1-url="projects/biomass-fired-chp-plant-with-fuel-drier.pdf">
-          <td class="expand-btn"><span class="toggle-icon">+</span></td>
           <td class="clickable-project">Biomass‑fired Combined Heat and Power Plant</td>
           <td class="year-column">2023</td>
         </tr>
 
         <!-- 2022 ---------------------------------------------------------->
         <tr onclick="toggleDetails(this)"
-            data-inst="Bachelors Thesis | Hanyang University (Seoul)"
+            data-category="Bachelors Thesis | Hanyang University (Seoul)"
             data-desc="Process simulation of MDEA solvent capture | Energy and cost optimisation."
             data-link1-name="Report"
             data-link1-url="projects/simulation-optimization-mdea-carbon-capture.pdf">
-          <td class="expand-btn"><span class="toggle-icon">+</span></td>
           <td class="clickable-project">Simulation & Optimisation of MDEA‑based Carbon Capture</td>
           <td class="year-column">2022</td>
         </tr>
 
         <!-- 2021 ---------------------------------------------------------->
         <tr onclick="toggleDetails(this)"
-            data-inst="Hanyang University (Seoul)"
+            data-category="Hanyang University (Seoul)"
             data-desc="Parameter fitting for NRTL models | Improved phase‑behaviour prediction."
             data-link1-name="Report"
             data-link1-url="projects/nrtl-parameter-optimization-alkane-sulfolane.pdf">
-          <td class="expand-btn"><span class="toggle-icon">+</span></td>
-          <td class="clickable-project">NRTL Parameter Optimisation for Alkane–Sulfolane Mixtures</td>
+          <td class="clickable-project">NRTL Parameter Optimisation for <span class="no-break">Alkane–Sulfolane Mixtures</span></td>
           <td class="year-column">2021</td>
         </tr>
 
         <tr onclick="toggleDetails(this)"
-            data-inst="Hanyang University (Seoul)"
-            data-desc="Energy analysis of CO₂ compression | Refrigeration cycles for CCS systems."
+            data-category="Hanyang University (Seoul)"
+            data-desc="Energy analysis of CO<sub>2</sub> compression | Refrigeration cycles for CCS systems."
             data-link1-name="Report"
             data-link1-url="projects/co2-compression-refrigeration-ccs-energy-penalty.pdf">
-          <td class="expand-btn"><span class="toggle-icon">+</span></td>
-          <td class="clickable-project">CO₂ Compression & Refrigeration for CCS</td>
+          <td class="clickable-project">CO<sub>2</sub> Compression & Refrigeration for CCS</td>
           <td class="year-column">2021</td>
         </tr>
 
         <!-- 2020 ---------------------------------------------------------->
         <tr onclick="toggleDetails(this)"
-            data-inst="Hanyang University (Seoul)"
+            data-category="Hanyang University (Seoul)"
             data-desc="PCA‑based face recognition | Implementation of the Eigenfaces algorithm."
             data-link1-name="Presentation"
             data-link1-url="projects/eigenfaces-kim-seonggyun.pdf">
-          <td class="expand-btn"><span class="toggle-icon">+</span></td>
-          <td class="clickable-project">Eigenfaces</td>
+          <td class="clickable-project">Eigenfaces — Face reconstruction</td>
           <td class="year-column">2020</td>
         </tr>
       </tbody>
