Visual enhancements, side projects page update

--- a/projects.html
+++ b/projects.html
@@ -34,8 +34,8 @@
       <tbody>
         <!-- 2024 ---------------------------------------------------------->
         <tr onclick="toggleDetails(this)"
-            data-category="Coursework | KTH Royal Institute of Technology"
-            data-desc="A techno‑economic study evaluating the deployment of carbon capture and storage in Sweden. | Lead implementation of kinetic reaction models and process simulation for the carbon utilization (MeOH synthesis) process. | Developed a techno‑economic model for the entire CCUS chain, including carbon capture, transport, and storage."
+            data-category="KTH Royal Institute of Technology"
+            data-desc="A techno‑economic study evaluating a hypothetical deployment of carbon capture and storage/utilization in Sweden. | Lead implementation of kinetic reaction models and process simulation for the carbon utilization (MeOH synthesis) process on <b>Aspen PLUS</b> (see p.46–50). | Developed a techno‑economic model for the entire CCUS chain, including carbon capture, hydrogenation, marine transport, and storage."
             data-link1-name="Report"
             data-link1-url="projects/techno-economic-analysis-ccus-sweden.pdf">
           <td class="clickable-project">Techno‑economic Analysis of CCUS in Sweden</td>
@@ -44,7 +44,7 @@
 
         <tr onclick="toggleDetails(this)"
             data-category="KSSEA (Korean-Scandinavian Scientists and Engineers Association)"
-            data-desc="Held an introductory presentation on CCUS processes. | Discussed post-combustion carbon capture process in depth, along with the importance of process modelling. | Presented at the KSSEA 2025 conference in Stockholm, Sweden."
+            data-desc="Held an introductory presentation on CCUS processes. | Discussed post-combustion carbon capture process in depth, along with the importance of process modelling. | Presented at the KSSEA 2025 conference in Stockholm, Sweden. | Suggested prospective industrial applications of CCUS in Nordic region."
             data-link1-name="Presentation"
             data-link1-url="projects/introduction-to-ccus-kssea-2025.pdf">
           <td class="clickable-project">Introduction to CCUS</td>
@@ -52,12 +52,12 @@
         </tr>
 
         <tr onclick="toggleDetails(this)"
-            data-category="APS Academic Competition – Europe"
-            data-desc="My entry to a three-month academic competition using a next-generation process simulator, AVEVA Process Simulation. | Built and optimized an ammonia process with green hydrogen feed from solar farm. | Compared the ammonia route to a direct pipeline transport route and demonstrated economic feasibility of ammonia as a hydrogen carrier. | Won the first prize (best overall) in Europe."
-            data-link1-name="Competition submission"
-            data-link1-url="projects/aps-competition-submission-seonggyun-kim.pdf"
-            data-link2-name="Presentation"
-            data-link2-url="projects/aveva-competition-winners-presentation.pdf">
+            data-category="APS Academic Competition 2023 – Europe"
+            data-desc="My entry to a three-month academic competition using a next-generation process simulator, <b>AVEVA Process Simulation</b>. | Built and optimized an ammonia process with green hydrogen feed from solar farm. | Compared the ammonia route to a direct pipeline transport route and demonstrated economic feasibility of ammonia as a hydrogen carrier. | Won the first prize (best overall) in Europe."
+            data-link1-name="Presentation"
+            data-link1-url="projects/aveva-competition-winners-presentation.pdf"
+            data-link2-name="Competition submission"
+            data-link2-url="projects/aps-competition-submission-seonggyun-kim.pdf">
           <td class="clickable-project">Hydrogen Economy: Ammonia Synthesis Process Optimization</td>
           <td class="year-column">2024</td>
         </tr>
@@ -74,7 +74,16 @@
         <!-- 2023 ---------------------------------------------------------->
         <tr onclick="toggleDetails(this)"
             data-category="KTH Royal Institute of Technology"
-            data-desc="Research on Ni‑rich cathodes | Focused on high‑performance Li‑ion batteries."
+            data-desc="A full Thermodynamic analysis on a combined heat and power (CHP) plant. | Degree of freedom analysis and energy analysis. | Evaluated the performance of a biomass-fired CHP plant with a fuel drier."
+            data-link1-name="Report"
+            data-link1-url="projects/biomass-fired-chp-plant-with-fuel-drier.pdf">
+          <td class="clickable-project">Biomass‑fired Combined Heat and Power Plant</td>
+          <td class="year-column">2023</td>
+        </tr>
+        
+        <tr onclick="toggleDetails(this)"
+            data-category="KTH Royal Institute of Technology"
+            data-desc="Research on Ni‑rich cathodes | Lead research on commercial applications."
             data-link1-name="Report"
             data-link1-url="projects/nickel-rich-electrodes-li-ion-batteries.pdf">
           <td class="clickable-project">Nickel‑rich Electrodes for Li‑ion Batteries</td>
@@ -83,35 +92,27 @@
 
         <tr onclick="toggleDetails(this)"
             data-category="KTH Royal Institute of Technology"
-            data-desc="Risk assessment of pilot‑scale gasifiers | Safety and operational analysis."
+            data-desc="Risk assessment of an exisitng pilot‑scale gasifier | What-if analysis, Preliminary Hazard Analysis, Risk rating."
             data-link1-name="Report"
             data-link1-url="projects/pressurized-fluidized-bed-gasifier-risk-analysis.pdf">
-          <td class="clickable-project">Pressurised Pilot‑scale Fluidised Bed Gasifier</td>
+          <td class="clickable-project">Risk Analysis: Pressurised Pilot‑scale Fluidized Bed Gasifier</td>
           <td class="year-column">2023</td>
         </tr>
 
-        <tr onclick="toggleDetails(this)"
-            data-category="KTH Royal Institute of Technology"
-            data-desc="Analysis of biomass CHP systems | Integration of fuel drying for improved efficiency."
-            data-link1-name="Report"
-            data-link1-url="projects/biomass-fired-chp-plant-with-fuel-drier.pdf">
-          <td class="clickable-project">Biomass‑fired Combined Heat and Power Plant</td>
-          <td class="year-column">2023</td>
-        </tr>
 
         <!-- 2022 ---------------------------------------------------------->
         <tr onclick="toggleDetails(this)"
-            data-category="Bachelors Thesis | Hanyang University (Seoul)"
-            data-desc="Process simulation of MDEA solvent capture | Energy and cost optimisation."
+            data-category="Bachelor&apos;s Thesis | Hanyang University (Seoul)"
+            data-desc="Process simulation of a absorption-based capture process using MDEA on Aspen HYSYS. | Detailed explanation on building the simulation model. | Described the relationship between the key process parameters and key performance indicators. | Optimized the process to minimize specific reboiler duty in the regenerator."
             data-link1-name="Report"
             data-link1-url="projects/simulation-optimization-mdea-carbon-capture.pdf">
-          <td class="clickable-project">Simulation & Optimisation of MDEA‑based Carbon Capture</td>
+          <td class="clickable-project">Simulation & Optimization of MDEA‑based Carbon Capture</td>
           <td class="year-column">2022</td>
         </tr>
 
         <!-- 2021 ---------------------------------------------------------->
         <tr onclick="toggleDetails(this)"
-            data-category="Hanyang University (Seoul)"
+            data-category="Coursework | Hanyang University (Seoul)"
             data-desc="Parameter fitting for NRTL models | Improved phase‑behaviour prediction."
             data-link1-name="Report"
             data-link1-url="projects/nrtl-parameter-optimization-alkane-sulfolane.pdf">
@@ -120,7 +121,7 @@
         </tr>
 
         <tr onclick="toggleDetails(this)"
-            data-category="Hanyang University (Seoul)"
+            data-category="Coursework | Hanyang University (Seoul)"
             data-desc="Energy analysis of CO<sub>2</sub> compression | Refrigeration cycles for CCS systems."
             data-link1-name="Report"
             data-link1-url="projects/co2-compression-refrigeration-ccs-energy-penalty.pdf">
@@ -130,7 +131,7 @@
 
         <!-- 2020 ---------------------------------------------------------->
         <tr onclick="toggleDetails(this)"
-            data-category="Hanyang University (Seoul)"
+            data-category="Coursework | Hanyang University (Seoul)"
             data-desc="PCA‑based face recognition | Implementation of the Eigenfaces algorithm."
             data-link1-name="Presentation"
             data-link1-url="projects/eigenfaces-kim-seonggyun.pdf">
