--- a/projects.html
+++ b/projects.html
@@ -22,12 +22,12 @@
 
   <main class="container">
     <h2>Projects</h2>
-    <p>Click on the project titles to view more details and associated report/slides.</p>
+    <p>Click on the project titles to view more details and associated report or presentation slides.</p>
     <!-- Project table -->
     <table id="project-table">
       <thead>
         <tr>
-          <th onclick="sortTable(0)">Title</th>
+          <th>Title</th>
           <th class="year-column" onclick="sortTable(1)">Year</th>
         </tr>
       </thead>
@@ -56,7 +56,7 @@
             data-desc="My entry to a three-month academic competition using a next-generation process simulator, <b>AVEVA Process Simulation</b>. | Built and optimized an ammonia process with green hydrogen feed from solar farm. | Compared the ammonia route to a direct pipeline transport route and demonstrated economic feasibility of ammonia as a hydrogen carrier. | Won the first prize (best overall) in Europe."
             data-link1-name="Presentation"
             data-link1-url="projects/aveva-competition-winners-presentation.pdf"
-            data-link2-name="Competition submission"
+            data-link2-name="Competition Entry"
             data-link2-url="projects/aps-competition-submission-seonggyun-kim.pdf">
           <td class="clickable-project">Hydrogen Economy: Ammonia Synthesis Process Optimization</td>
           <td class="year-column">2024</td>
@@ -95,7 +95,7 @@
             data-desc="Risk assessment of an exisitng pilot‑scale gasifier | What-if analysis, Preliminary Hazard Analysis, Risk rating."
             data-link1-name="Report"
             data-link1-url="projects/pressurized-fluidized-bed-gasifier-risk-analysis.pdf">
-          <td class="clickable-project">Risk Analysis: Pressurised Pilot‑scale Fluidized Bed Gasifier</td>
+          <td class="clickable-project">Risk Analysis: Pressurized Pilot‑scale Fluidized Bed Gasifier</td>
           <td class="year-column">2023</td>
         </tr>
 
@@ -103,7 +103,7 @@
         <!-- 2022 ---------------------------------------------------------->
         <tr onclick="toggleDetails(this)"
             data-category="Bachelor&apos;s Thesis | Hanyang University (Seoul)"
-            data-desc="Process simulation of a absorption-based capture process using MDEA on Aspen HYSYS. | Detailed explanation on building the simulation model. | Described the relationship between the key process parameters and key performance indicators. | Optimized the process to minimize specific reboiler duty in the regenerator."
+            data-desc="Process simulation of a absorption-based capture process using MDEA on <b>Aspen HYSYS</b>. | Detailed explanation on building the simulation model. | Described the relationship between the key process parameters and key performance indicators. | Optimized the process to minimize specific reboiler duty in the regenerator."
             data-link1-name="Report"
             data-link1-url="projects/simulation-optimization-mdea-carbon-capture.pdf">
           <td class="clickable-project">Simulation & Optimization of MDEA‑based Carbon Capture</td>
@@ -113,10 +113,10 @@
         <!-- 2021 ---------------------------------------------------------->
         <tr onclick="toggleDetails(this)"
             data-category="Coursework | Hanyang University (Seoul)"
-            data-desc="Parameter fitting for NRTL models | Improved phase‑behaviour prediction."
+            data-desc="Parameter fitting for NRTL models | Improved phase‑behaviour prediction by adding a linear term in the tau (&tau;) function."
             data-link1-name="Report"
             data-link1-url="projects/nrtl-parameter-optimization-alkane-sulfolane.pdf">
-          <td class="clickable-project">NRTL Parameter Optimisation for <span class="no-break">Alkane–Sulfolane Mixtures</span></td>
+          <td class="clickable-project">NRTL Parameter Optimization for <span class="no-break">Alkane–Sulfolane Mixtures</span></td>
           <td class="year-column">2021</td>
         </tr>
 
@@ -135,7 +135,7 @@
             data-desc="PCA‑based face recognition | Implementation of the Eigenfaces algorithm."
             data-link1-name="Presentation"
             data-link1-url="projects/eigenfaces-kim-seonggyun.pdf">
-          <td class="clickable-project">Eigenfaces — Face reconstruction</td>
+          <td class="clickable-project">Eigenfaces – Face reconstruction</td>
           <td class="year-column">2020</td>
         </tr>
       </tbody>
