--- a/side-projects.html
+++ b/side-projects.html
@@ -26,7 +26,7 @@
     <h3>Music</h3>
     <h4 class="subheading">Jazz orchestras</h4>
     <p>I played tuba and bass in student jazz orchestras (PromenadorQuestern och med Baletten Paletten, Kårsdraget) in Stockholm, Sweden.</p>
-    <div class="image-scroller">
+    <div class="image-scroller" style="max-width:100%;overflow-x:auto;">
       <div class="image-scroller-item">
         <img src="images/pq-otukt-1.jpg" alt="PQ Concert Photo 2025" class="image-scroller-img" oncontextmenu="return false;">
         <div class="image-scroller-caption">PQ Concert 2025</div>
@@ -42,15 +42,17 @@
     </div>
     <h4 class="subheading">Jazz composition</h4>
     <p>Here's a short jazz ballad I wrote and recorded in 2019, when I was serving in the Korean Air Force. It was ten days before I got to have some days off.</p>
-    <iframe
-      class="music-iframe"
-      width="100%"
-      height="166"
-      scrolling="no"
-      frameborder="20"
-      allow="autoplay"
-      src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/896876224&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true">
-    </iframe>
+    <div style="width:100%;overflow-x:auto;">
+      <iframe
+        class="music-iframe"
+        width="100%"
+        height="166"
+        scrolling="no"
+        frameborder="20"
+        allow="autoplay"
+        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/896876224&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true">
+      </iframe>
+    </div>
     <hr>
     <h3>Linux Ricing</h3>
     <p>Will be updated soon</p>
