--- a/side-projects.html
+++ b/side-projects.html
@@ -26,7 +26,7 @@
     <h3>Music</h3>
     <h4 class="subheading">Jazz orchestras</h4>
     <p>I played tuba and bass in student jazz orchestras (PromenadorQuestern och med Baletten Paletten, Kårsdraget) in Stockholm, Sweden.</p>
-    <div class="image-scroller" style="max-width:100%;overflow-x:auto;">
+    <div class="image-scroller">
       <div class="image-scroller-item">
         <img src="images/pq-otukt-1.jpg" alt="PQ Concert Photo 2025" class="image-scroller-img" oncontextmenu="return false;">
         <div class="image-scroller-caption">PQ Concert 2025</div>
