--- a/side-projects.html
+++ b/side-projects.html
@@ -28,7 +28,7 @@
     <p>I played tuba and bass in student jazz orchestras (PromenadorQuestern och med Baletten Paletten, Kårsdraget) in Stockholm, Sweden.</p>
     <div class="image-scroller">
       <div class="image-scroller-item">
-        <img src="images/pq-otukt-1.jpg" alt="PQ Concert Photo 2025" class="image-scroller-img" oncontextmenu="return false;">
+        <img src="images/pq-otukt-1.jpeg" alt="PQ Concert Photo 2025" class="image-scroller-img" oncontextmenu="return false;">
         <div class="image-scroller-caption">PQ Concert 2025</div>
       </div>
       <div class="image-scroller-item">
