--- a/profile.html
+++ b/profile.html
@@ -22,36 +22,31 @@
     <a href="social.html"        class="nav-link">Social</a>
   </nav>
 
-  <main style="max-width: 860px; margin: 80px auto 40px; padding: 0 1rem;">
+  <main class="container">
     <h2>Profile</h2>
 
-    <p>Hello, I’m <strong>Seonggyun Kim</strong>, a master’s student in Chemical Engineering for Energy&nbsp;and&nbsp;Environment at KTH (Stockholm). My work centers on sustainable process design, energy‑system modelling and industry decarbonization.</p>
+    <p>Hello, I’m <strong>Seonggyun Kim</strong>, a master’s student in Chemical Engineering for Energy and Environment at KTH (Stockholm). My work centers on sustainable process design, energy‑system modelling and industry decarbonization.</p>
+    <p id="cv-desc">
+      You can
+      <a href="cv-seonggyun-kim.pdf" target="_blank">download</a>
+      my CV or
+      <a href="#" onclick="viewAndScrollCV(); return false;">view in this page</a>
+      .
+    </p>
+    <div id="cv-viewer"></div>
 
     <h3>Experience</h3>
     <ul class="profile-timeline">
-      <li><span class="profile-year">2023 – 2024</span>
-        Process Simulation Intern | AVEVA Process Simulation, R&amp;D</li>
-      <li><span class="profile-year">2012 – 2023</span>
-        Research Assistant | Fraunhofer UMSICHT</li>
-      <li><span class="profile-year">2019 – 2023</span>
-        Military Service | Republic of Korea Air Force Band</li>
+      <li><span class="year profile-year-narrow">2023 – 2024</span> Process Simulation Intern · R&amp;D AVEVA Process Simulation</li>
+      <li><span class="year profile-year-narrow">2022 – 2023</span> Research Assistant · Fraunhofer UMSICHT</li>
+      <li><span class="year profile-year-narrow">2019 – 2023</span> Military Service · Republic of Korea Air Force Band</li>
     </ul>
 
     <h3>Education</h3>
     <ul class="profile-timeline">
-      <li><span class="profile-year">2023 – 2025</span>
-        KTH Royal Institute of Technology – MSc, Chemical Engineering for Energy &amp; Environment</li>
-      <li><span class="profile-year">2017 – 2023</span>
-        Hanyang University – BSc, Chemical Engineering</li>
-      <li><span class="profile-year">2013 – 2016</span>
-        Seoul Global High School</li>
-    </ul>
-
-    <h3>CV</h3>
-    <p>You can download or view my full CV here:</p>
-    <ul>
-      <li><a href="cv-seonggyun-kim.pdf" target="_blank">Download CV</a></li>
-      <li><a href="#" onclick="viewPDF('cv-seonggyun-kim.pdf', 'cv-viewer'); return false;">View CV on this page</a></li>
+      <li><span class="year profile-year-narrow">2023 – 2025</span> MSc in Chemical Engineering for Energy and Environment · KTH Royal Institute of Technology</li>
+      <li><span class="year profile-year-narrow">2017 – 2023</span> BSc in Chemical Engineering · Hanyang University (Seoul)</li>
+      <li><span class="year profile-year-narrow">2013 – 2016</span> Seoul Global High School</li>
     </ul>
 
     <!-- Container for in‑page PDF viewer -->
@@ -60,5 +55,13 @@
 
   <!-- Shared JavaScript -->
   <script src="main.js" defer></script>
+  <script>
+    function viewAndScrollCV() {
+      viewPDF('cv-seonggyun-kim.pdf', 'cv-viewer');
+      setTimeout(function() {
+        document.getElementById('cv-viewer').scrollIntoView({ behavior: 'smooth', block: 'start' });
+      }, 50);
+    }
+  </script>
 </body>
 </html>
