--- a/side-projects.html
+++ b/side-projects.html
@@ -33,7 +33,7 @@
   scrolling="no"
   frameborder="no"
   allow="autoplay"
-  src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/896876224&visual=true&show_artwork=true&color=%2369759A&auto_play=true&hide_related=true&show_comments=true&show_user=true&show_reposts=false&show_teaser=true">
+  src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/896876224&visual=false&show_artwork=true&color=%2369759A&auto_play=true&hide_related=true&show_comments=true&show_user=true&show_reposts=false&show_teaser=true">
 </iframe>
 
     
