--- a/side-projects.html
+++ b/side-projects.html
@@ -28,7 +28,7 @@
     <h4 class="subheading">Jazz composition</h4>
     <p>Here's a short jazz ballad I wrote and recorded in 2019, when I was serving in the Korean Air Force. It was ten days before I got to have some days off.</p>
 <iframe
-  width="100%"
+  width="500"
   height="200"
   scrolling="no"
   frameborder="no"
