enhance table design

--- a/projects.html
+++ b/projects.html
@@ -21,8 +21,8 @@
   </nav>
 
   <main class="container">
-    <h2>Projects</h2>
-    <p>Click on the project titles to view more details and associated report or presentation slides.</p>
+    <h2>Academic Projects</h2>
+    <p>Click on a project title to view more details and the associated report or presentation slides. The list includes projects from my coursework at KTH or Hanyang, competition entries, conference presentations, and more. I plan to organize the list into categories in the future.</p>
     <!-- Project table -->
     <table id="project-table">
       <thead>
