--- a/index.html
+++ b/index.html
@@ -14,7 +14,16 @@
 
 <body>
   <nav>
-    <a href="index.html"         class="nav-link">Home</a>
+    <a href="index.html" class="nav-link" title="Home" style="font-size:1.25em;line-height:1;vertical-align:middle;">
+      <span style="display:inline-block;vertical-align:middle;">
+        <!-- Home icon SVG (Tabler Icons style) -->
+        <svg xmlns="http://www.w3.org/2000/svg" width="1.35em" height="1.35em" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round" style="vertical-align:middle;">
+          <path d="M5 12l-2 0l9 -9l9 9l-2 0" />
+          <path d="M5 12v7a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-7" />
+          <path d="M9 21v-6a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v6" />
+        </svg>
+      </span>
+    </a>
     <a href="profile.html"       class="nav-link">Profile</a>
     <a href="projects.html"      class="nav-link">Projects</a>
     <a href="side-projects.html" class="nav-link">Side Projects</a>
@@ -38,7 +47,7 @@
     <div class="card-grid">
       <a class="card" href="profile.html">
         <h3>Profile / CV</h3>
-        <p>Academic background, work experience, and how to reach me.</p>
+        <p>Academic background, work experience, and my CV.</p>
         <!-- <a href="profile.html">Open&nbsp;Profile&nbsp;→</a> -->
       </a>
       
@@ -50,7 +59,7 @@
 
       <a class="card" href="side-projects.html">
         <h3>Side Projects</h3>
-        <p>Fun side projects: some front-end development and music production.</p>
+        <p>Fun side projects: some front-end development and music stuff.</p>
         <!-- <a href="side-projects.html">See&nbsp;Side‑Projects&nbsp;→</a> -->
       </a>
 
