added a project image, enhanced ui

--- a/projects.html
+++ b/projects.html
@@ -66,7 +66,8 @@
             data-link1-name="Presentation"
             data-link1-url="projects/aveva-competition-winners-presentation.pdf"
             data-link2-name="Competition Entry"
-            data-link2-url="projects/aps-competition-submission-seonggyun-kim.pdf">
+            data-link2-url="projects/aps-competition-submission-seonggyun-kim.pdf"
+            data-img="images/aps-flowsheet.jpg">
           <td class="clickable-project">Hydrogen Economy: Ammonia Synthesis Process Optimization</td>
           <td class="year-column">2024</td>
         </tr>
