--- a/side-projects.html
+++ b/side-projects.html
@@ -12,7 +12,6 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- Navbar placeholder (filled by main.js) -->
   <nav>
     <a href="index.html" class="nav-link" title="Home" style="font-size:1.25em;line-height:1;vertical-align:middle;">
       <span style="display:inline-block;vertical-align:middle;">
@@ -37,7 +36,8 @@
     <h4 class="subheading">Jazz composition</h4>
     <p>Here's a short jazz ballad I wrote and recorded in 2019, when I was serving in the Korean Air Force. It was ten days before I got to have some days off.</p>
 <iframe
-  width="500"
+  class="music-iframe"
+  style="width:100%;max-width:700px;"
   height="200"
   scrolling="no"
   frameborder="no"
