--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <p>
       <!-- Master’s student in Chemical Engineering for Energy &amp; Environment at KTH.<br> -->
       <!-- Process simulation, thermodynamics, techno-economic analysis, etc.<br> -->
-      Welcome! Thanks for visiting my website, but this webpage is still a work in progress. Especially, currently there is very little consideration for mobile devices.<br>
+      Welcome! Thanks for visiting me, but this website is still a work in progress. Especially, currently there is very little consideration for mobile devices.<br>
       If you are here to view my CV online, click <a href="cv-seonggyun-kim.pdf">here</a>.
     </p>
     <!-- <a class="cta-btn">View Projects</a> -->
