--- a/profile.html
+++ b/profile.html
@@ -58,6 +58,12 @@
       <li><span class="year profile-year-narrow">2013 – 2016</span> Seoul Global High School</li>
     </ul>
 
+    <h3>Skills</h3>
+    <ul class="profile-timeline">
+      <li><b>Modelling software</b>: AVEVA Process Simulation, Aspen HYSYS/Plus/Dynamics, COMSOL Multiphysics</li>
+      <li><b>Programming</b>: MATLAB, Python, VBA</li>
+    </ul>
+
     <!-- Container for in‑page PDF viewer -->
     <div id="cv-viewer"></div>
   </main>
