--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
   </nav>
   <!-- Hero / Intro -->
   <header class="hero">
-    <h1>Seonggyun Kim</h1>
-    <p>
+    <h1 style="margin-bottom:0em;">Seonggyun Kim</h1>
+    <div style="font-size:1em; color:var(--color-muted,#6e6e73); margin-bottom:1em; font-family:'Inter',sans-serif; font-variant: normal;">
+      <span title="IPA pronunciation" style="font-size:0.85em;">[sʌŋ.gjun kim]</span>
+    </div>
+    <p style="margin-top:0.5em;">
       <!-- Master’s student in Chemical Engineering for Energy &amp; Environment at KTH.<br> -->
       <!-- Process simulation, thermodynamics, techno-economic analysis, etc.<br> -->
       Welcome! Thanks for visiting me, but this website is still a work in progress. Especially, currently there is very little consideration for mobile devices.<br>
