--- a/profile.html
+++ b/profile.html
@@ -55,7 +55,7 @@
     <ul class="profile-timeline">
       <li><span class="year profile-year-narrow">2023 – 2025</span> MSc in Chemical Engineering for Energy and Environment · KTH Royal Institute of Technology</li>
       <li><span class="year profile-year-narrow">2017 – 2023</span> BSc in Chemical Engineering · Hanyang University (Seoul)</li>
-      <li><span class="year profile-year-narrow">2013 – 2016</span> Seoul Global High School</li>
+      <!-- <li><span class="year profile-year-narrow">2013 – 2016</span> Seoul Global High School</li> -->
     </ul>
 
     <h3>Skills</h3>
