--- a/side-projects.html
+++ b/side-projects.html
@@ -50,15 +50,21 @@
     <p>I played tuba and bass in student jazz orchestras (PromenadorQuestern och med Baletten Paletten, Kårsdraget) in Stockholm, Sweden. Mainly played Dixieland swing jazz.</p>
     <div class="image-scroller">
       <div class="image-scroller-item">
-        <img src="images/pq-otukt-1.jpeg" alt="PQ Concert Photo 2025" class="image-scroller-img" oncontextmenu="return false;">
+        <a href="#" onclick="enlargeImage(this); return false;" data-full="images/pq-otukt-1.jpeg">
+          <img src="images/pq-otukt-1.jpeg" alt="PQ Concert Photo 2025" class="image-scroller-img" oncontextmenu="return false;">
+        </a>
         <div class="image-scroller-caption">PQ Concert 2025</div>
       </div>
       <div class="image-scroller-item">
-        <img src="images/pq-sjoslaget-1.JPG" alt="PQ Otukt 2" class="image-scroller-img" oncontextmenu="return false;">
+        <a href="#" onclick="enlargeImage(this); return false;" data-full="images/pq-sjoslaget-1.JPG">
+          <img src="images/pq-sjoslaget-1.JPG" alt="PQ Otukt 2" class="image-scroller-img" oncontextmenu="return false;">
+        </a>
         <div class="image-scroller-caption">Sjöslaget 2024</div>
       </div>
       <div class="image-scroller-item">
-        <img src="images/ihkd-1.JPG" alt="IHKH" class="image-scroller-img" oncontextmenu="return false;">
+        <a href="#" onclick="enlargeImage(this); return false;" data-full="images/ihkd-1.JPG">
+          <img src="images/ihkd-1.JPG" alt="IHKH" class="image-scroller-img" oncontextmenu="return false;">
+        </a>
         <div class="image-scroller-caption">"IHKH"</div>
       </div>
     </div>
@@ -108,6 +114,14 @@
         img.oncontextmenu = () => false;
       });
     });
+
+    function enlargeImage(anchor) {
+      const fullImageUrl = anchor.getAttribute('data-full');
+      const img = new Image();
+      img.src = fullImageUrl;
+      const w = window.open("");
+      w.document.write(img.outerHTML);
+    }
   </script>
 </body>
 </html>
