--- a/side-projects.html
+++ b/side-projects.html
@@ -51,19 +51,19 @@
     <div class="image-scroller">
       <div class="image-scroller-item">
         <a href="#" onclick="enlargeImage(this); return false;" data-full="images/pq-otukt-1.jpeg">
-          <img src="images/pq-otukt-1.jpeg" alt="PQ Concert Photo 2025" class="image-scroller-img" oncontextmenu="return false;">
+          <img src="images/pq-otukt-1.jpeg" alt="PQ Concert 2025, at Nymble." class="image-scroller-img" oncontextmenu="return false;">
         </a>
         <div class="image-scroller-caption">PQ Concert 2025</div>
       </div>
       <div class="image-scroller-item">
         <a href="#" onclick="enlargeImage(this); return false;" data-full="images/pq-sjoslaget-1.JPG">
-          <img src="images/pq-sjoslaget-1.JPG" alt="PQ Otukt 2" class="image-scroller-img" oncontextmenu="return false;">
+          <img src="images/pq-sjoslaget-1.JPG" alt="Sjöslaget 2024, on the ferry to Tallinn." class="image-scroller-img" oncontextmenu="return false;">
         </a>
         <div class="image-scroller-caption">Sjöslaget 2024</div>
       </div>
       <div class="image-scroller-item">
         <a href="#" onclick="enlargeImage(this); return false;" data-full="images/ihkd-1.JPG">
-          <img src="images/ihkd-1.JPG" alt="IHKH" class="image-scroller-img" oncontextmenu="return false;">
+          <img src="images/ihkd-1.JPG" alt="IHKH, at PQ concert 2025." class="image-scroller-img" oncontextmenu="return false;">
         </a>
         <div class="image-scroller-caption">"IHKH"</div>
       </div>
