--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
   <!-- Global styles -->
   <link rel="stylesheet" href="styles.css">
+  <!-- Plausible Analytics -->
+  <script defer data-domain="seonggyun.kim" src="https://analytics.seonggyun.kim/js/script.js"></script>
+
 </head>
 
 <body>
