--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Global styles -->
   <link rel="stylesheet" href="styles.css">
   <!-- Plausible Analytics -->
-  <script defer data-domain="seonggyun.kim" src="https://analytics.seonggyun.kim/js/script.js"></script>
+  <script defer data-domain="seonggyun.kim" src="https://data.seonggyun.kim/js/script.js"></script>
 
 </head>
 
