--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   <!-- Global styles -->
   <link rel="stylesheet" href="styles.css">
   <!-- Plausible Analytics -->
-  <script defer data-domain="seonggyun.kim" src="https://data.seonggyun.kim/js/script.js"></script>
-
+  <script defer src="https://stats.seonggyun.kim/script.js" data-website-id="35e98543-699f-4f21-9bd5-5476f516f2ef"></script>
 </head>
 
 <body>
