--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Global styles -->
   <link rel="stylesheet" href="styles.css">
   <!-- Plausible Analytics -->
-  <script defer src="https://stats.seonggyun.kim/script.js" data-website-id="35e98543-699f-4f21-9bd5-5476f516f2ef"></script>
+  <script defer src="https://umami.seonggyun.kim/script.js" data-website-id="35e98543-699f-4f21-9bd5-5476f516f2ef"></script>
 </head>
 
 <body>
